# rucho

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml
.claude/: settings.json
.claude/commands/: add-endpoint.md  precommit.md  release.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
benches/: endpoint_benchmarks.rs  response_benchmarks.rs
config_samples/: rucho.conf.default
debian/: preinst  rucho.service
debian/man/: rucho.1
docs/: API_REFERENCE.md  INTERNALS.md  USAGE_EXAMPLES.md
src/: app.rs  lib.rs  main.rs  openapi.rs  tcp_udp_handlers.rs
src/cli/: commands.rs  mod.rs
src/handlers/: echo.rs
src/routes/: anything.rs  base64.rs  bytes.rs  cache.rs  content_types.rs  cookies.rs  core_routes.rs  core_routes_tests.rs  delay.rs  delete.rs  drip.rs  encoding.rs  get.rs  healthz.rs  image.rs  metrics.rs  mod.rs  options.rs  patch.rs  post.rs  put.rs  range.rs  redirect.rs  response_headers.rs  status.rs
src/server/: chaos_layer.rs  http.rs  metrics_layer.rs  mod.rs  request_id.rs  shutdown.rs  tcp.rs  timing_layer.rs  tls.rs  udp.rs
src/utils/: access_log.rs  config.rs  constants.rs  error_response.rs  json_response.rs  metrics.rs  mod.rs  pid.rs  request_models.rs  server_config.rs  timing.rs
tasks/: lessons.md  todo.md
tests/: integration.rs
tests/fixtures/tls/: cert.pem  key.pem
