[package]
name = "rucho"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
sysinfo = "0.30"
base64 = "0.21.0" # Added for body encoding
# reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] } # Temporarily removed
tower = "0.5"        
tower-http = { version = "0.5", features = ["trace", "cors", "normalize-path"] }  
tokio-rustls = "0.25"
rustls = "0.23"
rustls-pemfile = "1.0"
hyper = { version = "1.0", features = ["server"] }
http = "1.0"
axum-server = { version = "0.7", features = ["tls-rustls"] }
utoipa = { version = "=3.5.0", features = ["axum_extras"] } # Pinning to 3.5.0
utoipa-swagger-ui = { version = "3.1.5", features = ["axum"] } # Changed to 3.1.5
serde_urlencoded = "0.7"
axum-extra = { version = "0.9.2", features = ["multipart"] }

[dev-dependencies]
tempfile = "3.8.0"