[package]
name = "rucho"
version = "0.1.0"
description = "Rucho - An echo server and general HTTP request inspector."
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
sysinfo = "0.30"
# reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] } # Temporarily removed
tower = "0.5"        
tower-http = { version = "0.5", features = ["trace", "cors", "normalize-path", "compression-gzip", "compression-br"] }  
tokio-rustls = "0.25"
rustls = "0.23"
rustls-pemfile = "1.0"
hyper = { version = "1.0", features = ["server"] }
http = "1.0"
axum-server = { version = "0.7", features = ["tls-rustls"] }
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"

[dev-dependencies]
tempfile = "3.8.0"

[package.metadata.deb]
maintainer = "Rucho Project Contributors" # Or a more appropriate maintainer name
copyright = "2023 Rucho Project Contributors" # Or appropriate year/name
license-file = ["LICENSE.md", "0"] # Assuming you'll add a LICENSE.md, or adjust as needed
depends = "$auto"
maintainer-scripts = "debian/"
systemd-units = { enable = true } # Reverted format
assets = [
    ["target/release/rucho", "/usr/local/bin/rucho", "755"],
    ["config_samples/rucho.conf.default", "/etc/rucho/rucho.conf", "644"],
    ["debian/rucho.service", "/lib/systemd/system/rucho.service", "644"] # Ensure this is present
    # You might need to adjust the source path for rucho.conf if it's not default
]
