[package]
name = "rucho"
version = "1.4.0"
description = "Rucho - An echo server and general HTTP request inspector."
edition = "2021"
repository = "https://github.com/rumpus/rucho"
license = "MIT"
homepage = "https://github.com/rumpus/rucho"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
sysinfo = "0.30"
# reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] } # Temporarily removed
tower = "0.5"        
tower-http = { version = "0.5", features = ["trace", "cors", "normalize-path", "compression-gzip", "compression-br"] }  
tokio-rustls = "0.25"
rustls = "0.23"
rustls-pemfile = "1.0"
hyper = { version = "1.0", features = ["server"] }
http = "1.0"
axum-server = { version = "0.7", features = ["tls-rustls"] }
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
socket2 = { version = "0.5", features = ["all"] }
hyper-util = { version = "0.1", features = ["tokio"] }

[dev-dependencies]
tempfile = "3.8.0"
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }

[[bench]]
name = "response_benchmarks"
harness = false

[[bench]]
name = "endpoint_benchmarks"
harness = false

[package.metadata.deb]
maintainer = "Rucho Project Contributors"
copyright = "2025 Rucho Project Contributors"
license-file = ["LICENSE", "0"]
depends = "$auto"
maintainer-scripts = "debian/"
systemd-units = { enable = true }
assets = [
    ["target/release/rucho", "/usr/local/bin/rucho", "755"],
    ["config_samples/rucho.conf.default", "/etc/rucho/rucho.conf", "644"],
]
